[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.0.0-rc.2"
actix-web = "4.0.0-rc.3"
actix-files = "0.6.0-beta.16"
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
async-fs = "1"
futures = "0.3"
sled = "0.34"
bincode = "1"
image = "0.24"
bytes = { version = "1", features = ["serde"] }

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "process", "macros"]